prevent text overlap in eighth widgets

--- a/intranet/static/css/dashboard.widgets.css
+++ b/intranet/static/css/dashboard.widgets.css
@@ -1,3 +1,85 @@
+
+
+.widgets {
+    display: block;
+    position: absolute;
+    top: 56px;
+    right: 26px;
+    float: right;
+    width: 416px;
+    height: 500px;
+    visibility: hidden;
+}
+
+.widget {
+    border: 1px solid rgb(216,216,216);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    overflow: hidden;
+    background-color: rgb(242, 242, 244);
+    margin-bottom: 10px;
+
+    behavior: url("/static/js/PIE/PIE.htc");
+}
+
+.widget-title {
+    /* Generated by http://www.colorzilla.com/gradient-editor/#f9f9f9+0,f2f2f2+100;Widget */
+    background: rgb(245,245,245); /* Old browsers */
+/*    background: -moz-linear-gradient(top,  rgb(249,249,249) 0%, rgb(242,242,242) 100%);*/ /* FF3.6+ */
+/*    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(249,249,249)), color-stop(100%,rgb(242,242,242)));*/ /* Chrome,Safari4+ */
+/*    background: -webkit-linear-gradient(top,  rgb(249,249,249) 0%,rgb(242,242,242) 100%);*/ /* Chrome10+,Safari5.1+ */
+/*    background: -o-linear-gradient(top,  rgb(249,249,249) 0%,rgb(242,242,242) 100%);*/ /* Opera 11.10+ */
+/*    background: -ms-linear-gradient(top,  rgb(249,249,249) 0%,rgb(242,242,242) 100%);*/ /* IE10+ */
+/*    background: linear-gradient(to bottom,  rgb(249,249,249) 0%,rgb(242,242,242) 100%);*/ /* W3C */
+    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f9f9', endColorstr='#f2f2f2',GradientType=0 );*/ /* IE6-9 */
+    /*-pie-background-image: none;*/
+
+    border-bottom: 1px solid rgb(216,216,216);
+    padding: 0 8px;
+
+    line-height: 30px;
+    height: 30px;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 0 0;
+    behavior: url("/static/js/PIE/PIE.htc");
+
+    position: relative;
+}
+
+.widget-title h2 {
+    font-size: 14px;
+    float: left;
+}
+
+
+.widget .info {
+    font-size: 12px;
+    color: rgb(144,144,144);
+
+    position: absolute;
+    right: 10px;
+}
+
+.widget .warning-icon {
+    float: left;
+    display: inline;
+    padding-right: 4px;
+    color: red;
+}
+
+.widget .widget-title .warning i{
+    /*color: rgb(255,72,72);*/
+}
+
+
+@media (max-width: 355px) {
+    .main div.widgets {
+        width: 303px;
+    }
+}
+
 .block-header {
     height: 30px;
     line-height: 30px;
